rnsc/tests/snapshots/error-lexer-directives-dot_dot_method_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..method
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_method.rns:1:1 ]
   │
 1 │ ..method
   │ ────┬───  
   │     ╰───── did you mean '.method' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
