rnsc/tests/snapshots/error-lexer-directives-dot_enum.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
;;;;;;;;;;;
;;;; enum

.enum ;??
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_enum.rns:4:1 ]
   │
 4 │ .enum ;??
   │ ──┬──  
   │   ╰──── '.enum' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
