rnsc/tests/snapshots/error-lexer-directives-dot_enum_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
;;;;;;;;;;;
;;;; enum

.enum ;??
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_enum.rns:4:1 ]
   │
 4 │ .enum ;??
   │ ──┬──  
   │   ╰──── '.enum' is not a recognized directive
   │ 
   │ Help: Did you mean '.end'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-002
───╯
----- HASH -----
not generated
