rnsc/tests/snapshots/error-lexer-directives-dot_eof_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
.
----- STDERR -----
Error: unexpected end of file
   ╭─[ test_data/integration/error/lexer/directives/dot_eof.rns:2:1 ]
   │
 2 │ .
   │ ┬  
   │ ╰── unexpected end of file
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
