rnsc/tests/snapshots/error-lexer-directives-dot_inteface_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.interface
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_inteface.rns:1:1 ]
   │
 1 │ .interface
   │ ─────┬────  
   │      ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
